Project

General

Profile

Actions

Bug #64975

closed

crimson: Health check failed: 9 scrub errors (OSD_SCRUB_ERRORS)" in cluster log'

Added by Samuel Just about 2 months ago. Updated 24 days ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

ERROR 2024-03-15 10:04:01,561 [shard 1:main] osd - pg_epoch 198 pg[2.2( empty local-lis/les=11/12 n=0 ec=11/11 lis/c=11/11 les/c/f=12/12/0 sis=11) [0,1] r=0 lpr=11 crt=0'0 mlcod 0'0 active+clean+scrubbing+deep PGScrubber::emit_chunk_result: Scrub errors found. range: start: MIN, end: MAX, result: chunk_result_t(num_scrub_errors: 1, num_deep_scrub_errors: 0, snapset_errors: [[]], object_errors: [[inconsistent_obj_t(error: , object: //snapmapper, version: 0, shards: {osd_shard_t(osd: 0, shard: -1): shard_info_t(error: INFO_MISSING, size: 0, omap_digest_present: true, omap_digest: 4294967295, data_digest_present: true, data_digest: 4294967295, selected_io: false, primary: true), osd_shard_t(osd: 1, shard: -1): shard_info_t(error: INFO_MISSING, size: 0, omap_digest_present: true, omap_digest: 4294967295, data_digest_present: true, data_digest: 4294967295, selected_io: false, primary: false)}, union_shards: INFO_MISSING)]])

The bug is that scrub isn't skipping the snap mapper object.

Actions #1

Updated by Samuel Just about 2 months ago

Testing fix -- gonna stick the snap mapper keys into the pgmeta object and avoid the problem entirely.

Actions #2

Updated by Samuel Just about 2 months ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Samuel Just about 1 month ago

Testing a different fix, the above would have reintroduced a crash on OSD startup while reading the pg log.

Actions #4

Updated by Samuel Just about 1 month ago

  • Status changed from Fix Under Review to In Progress
Actions #5

Updated by Matan Breizman 24 days ago

  • Status changed from In Progress to Resolved
  • Pull request ID set to 56534
Actions

Also available in: Atom PDF